<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:onClick="register"
        android:text="@string/registerb"
        app:backgroundTint="#AA1515"
        app:icon="@drawable/clapperboard"
        app:iconSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Display"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:onClick="display"
        android:text="@string/display_button"
        app:backgroundTint="#AA1515"
        app:icon="@drawable/film"
        app:iconSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toEndOf="@+id/register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/Favourites"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:onClick="favourites"
        android:text="@string/favourities"
        app:backgroundTint="#AA1515"
        app:icon="@drawable/favorite"
        app:iconSize="30sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Display"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/Edit"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:onClick="edit"
        android:text="@string/edit"
        app:backgroundTint="#AA1515"
        app:icon="@drawable/edit"
        app:iconSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toEndOf="@+id/Favourites"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/Search"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:onClick="search"
        android:text="@string/searchb"
        app:backgroundTint="#AA1515"
        app:icon="@drawable/searching"
        app:iconSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edit" />

    <Button
        android:id="@+id/Rating"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:onClick="rating"
        android:text="@string/rating"
        app:backgroundTint="#AA1515"
        app:icon="@drawable/rating"
        app:iconSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/Search"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Favourites" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/logo2" />


</androidx.constraintlayout.widget.ConstraintLayout>